rename game's title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Phaser Game2</title>
+	<title>De Ghumake Game</title>
 	<script type="text/javascript" src="js/phaser.js"></script>
 </head>
 <body>
