Play sound when bullet reflects back.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>De Ghumake Game</title>
+    <title>De-Ghumake Game</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/phaser.js"></script>
+    <script type="text/javascript" src="js/Game.js"></script>
 </head>
 <body>
 <div id="de-ghumake-game"></div>
-<script type="text/javascript" src="js/Game.js"></script>
 </body>
 </html>
