Game name change to 360.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>De-Ghumake Game</title>
+    <title>360</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/phaser.js"></script>
     <script type="text/javascript" src="js/boot.js"></script>
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="js/gameover.js"></script>
     <script type="text/javascript">
         (function () {
-            var game = new Phaser.Game(800, 600, Phaser.CANVAS, 'de-ghumake-game');
+            var game = new Phaser.Game(800, 600, Phaser.CANVAS, 'game');
 
             game.state.add('Boot', boot);
             game.state.add('Preload', preload);
@@ -24,6 +24,6 @@
     </script>
 </head>
 <body>
-<div id="de-ghumake-game"></div>
+<div id="game"></div>
 </body>
 </html>
