--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>360</title>
+    <meta name="description" content="An arcade 2D game. Defend yourself against enemy bullets by reflecting it back with the shield that you control.">
+    <meta name="viewport" content="width=device-width">
+
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <script type="text/javascript" src="js/phaser.js"></script>
     <script type="text/javascript" src="js/boot.js"></script>
     <script type="text/javascript" src="js/preload.js"></script>
